js/src/jit-test/tests/binast/invalid/break-outside-while.dir
// |jit-test| error: unlabeled break must be inside loop or switch